--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -14,4 +14,4 @@ RUN pip install --no-cache-dir -r /tmp/requirements.txt
 # Відкриваємо порт
 EXPOSE 7004
 
-CMD ["python", "run.py"]
+CMD ["uvicorn", "app.main:app", "--host", "127.0.0.1", "--port", "7004"]
