--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,24 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
-            "name": "App debug",
+            "name": "app debug",
             "type": "debugpy",
             "request": "launch",
-            "program": "uvicorn",
-            "console": "integratedTerminal"
+
+            "module": "uvicorn",
+            "args": [
+                "app.main:app",
+                "--host", "127.0.0.1",
+                "--port", "7004"
+            ],
+
+            "cwd": "${workspaceFolder}",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "env": {
+                "PYTHONUNBUFFERED": "1"
+            }
         }
     ]
 }
