--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,6 +4,7 @@ FROM mcr.microsoft.com/devcontainers/python:1-3.12-bullseye
 
 
 COPY requirements.txt /tmp/requirements.txt
+COPY run.py /run.py
 COPY app /app
 
 
@@ -13,4 +14,4 @@ RUN pip install --no-cache-dir -r /tmp/requirements.txt
 # Відкриваємо порт
 EXPOSE 7004
 
-CMD ["uvicorn", "app.main:app", "--host", "127.0.0.1", "--port", "7004"]
+CMD ["python", "run.py"]
